--- a/index.html
+++ b/index.html
@@ -129,6 +129,105 @@
         <div class="explosion"></div>
         <div class="explosion"></div>
     </div>
+    <div class="paw hiddenPaw" id="paw1"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw2"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw3"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw4"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw5"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw6"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw7"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw8"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw9"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw10"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw11"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw12"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw13"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw14"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw15"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw16"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw17"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw18"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw19"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw20"> 
+        <img src="footprint.png">
+    </div>
+
+    <div class="paw hiddenPaw" id="paw21"> 
+        <img src="footprint.png">
+    </div>
+
+    <div class="paw hiddenPaw" id="paw22"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw23"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw24"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw25"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw26"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw27"> 
+        <img src="footprint.png">
+    </div>
+
+    <div class="paw hiddenPaw" id="paw28"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw29"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw30"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw31"> 
+        <img src="footprint.png">
+    </div>
+    <div class="paw hiddenPaw" id="paw32"> 
+        <img src="footprint.png">
+    </div>
 </div>
     <script src="index.js"></script>
 </body>
