--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <p class='text'>Будеш чайок?</p>
-        <button class="button">Даааа</button>
+        <button class="button">Таааак</button>
 
     <div class="firework hidden" id="firework1">
         <div class="explosion"></div>
